ingress/DeployIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress  
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - host: mymicroservices.xpirit.nl
    http:
      paths:      
      - path: /mywebapi
        backend:
          serviceName: myapiservice
          servicePort: 80
      - path: /myotherwebapi
        backend:
          serviceName: myotherapiservice
          servicePort: 80
